# simple-ecs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
simple_ecs/: __init__.py  ecs.py  ecs_old.py  storage.py
tests/: test_all.py  test_basic.py
