[tool.poetry]
name = "simple-ecs"
version = "0.0.1"
authors = []
description = "A user-friendly entity component system."
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.740.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest-profiling = "^1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
