[tool.poetry]
name = "simple-ecs"
authors = []
version = "0.0.1"
description = "A user-friendly entity component system."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mvonsm/simple-ecs"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.740.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
sphinx = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
